--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
 
             <br>
-            <p id="error-message" style="color: red; font-family: sans-serif; font-weight: bold;;"></p>
+            <p id="error-message"
+                style="color: red; font-family: sans-serif; font-weight: bold; font-size: 23px; text-decoration:  underline;">
+            </p>
             <!-- Error message paragraph -->
 
             <button type="submit">Subscribe it's free</button>
