--- a/pages/home.html
+++ b/pages/home.html
@@ -30,7 +30,9 @@
                 <input type="text" placeholder="Enter your First Name" name="fname" id="fname">
             </div>
 
-            <p id="error" style="color: red; font-family: sans-serif; font-weight: bold;"></p>
+            <p id="error"
+                style="color: red; font-family: sans-serif; font-weight: bold; text-decoration: underline; font-size: 23px;">
+            </p>
             <!-- Error message paragraph -->
 
             <br>
