--- a/transport/index.html
+++ b/transport/index.html
@@ -26,7 +26,7 @@
             padding: 25px;
         }
 
-        input[type="email"],
+        input[type="number"],
         input[type="password"] {
             padding: 15px;
             width: 35%;
@@ -68,7 +68,7 @@
         <a class="links" href="/transport/register.html">Don't have an account ?</a>
         <form id="formContainer" onsubmit="return ValidateForm()">
             <div class="form-group">
-                <input type="email" placeholder="Enter Email" name="signInEmail" id="signInEmail">
+                <input type="number" placeholder="Enter your file number" name="number" id="number">
             </div>
             <br>
             <div class="form-group">
@@ -87,23 +87,19 @@
 
     <script>
         function ValidateForm() {
-            let email = document.forms['formContainer']['signInEmail'].value;
+            let number = document.forms['formContainer']['number'].value;
             let password = document.forms['formContainer']['signInPassword'].value;
             let errorMessage = document.getElementById('error-message');
 
-            if (email == '') {
-                errorMessage.textContent = 'Email must be filled out';
+            errorMessage.textContent = '';
+
+            if (number === '') {
+                errorMessage.textContent = 'File number must be filled out';
                 return false;
             }
 
-            if (password == '') {
+            if (password === '') {
                 errorMessage.textContent = 'Password must be filled out';
-                return false;
-            }
-
-            let emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
-            if (!email.match(emailPattern)) {
-                errorMessage.textContent = 'Please enter a valid email';
                 return false;
             }
 
